Removed the java command line option "-XX:MaxPermSize=128m" as it has been removed in Java 8